plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.17.3'
    id 'com.palantir.git-version' version '0.14.0'
}

def getGitHash = { ->
    def stdout = new ByteArrayOutputStream()
    exec {
        commandLine 'git', 'rev-parse', '--short', 'HEAD'
        standardOutput = stdout
    }
    return stdout.toString().trim()
}


group 'org.videobug'
version '2024.7.29-' + getGitHash()
    

compileJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

repositories {
    mavenCentral()
    maven {
        url 'https://gitlab.com/api/v4/projects/35360521/packages/maven'
        name "GitLab"
        credentials(HttpHeaderCredentials) {
            name = 'Private-Token'
            value = gitLabPrivateToken
        }
        authentication {
            header(HttpHeaderAuthentication)
        }
    }

}

task createProperties() {
    doLast {
        def details = versionDetails()
        new File("$rootDir/src/main/resources/version.properties").withWriter { w ->
            Properties p = new Properties()
            p['version'] = project.version.toString()
            p['gitLastTag'] = details.lastTag
            p['gitCommitDistance'] = details.commitDistance.toString()
            p['gitHash'] = details.gitHash.toString()
            p['gitHashFull'] = details.gitHashFull.toString() // full 40-character Git commit hash
//            p['gitBranchName'] = details.branchName // is null if the repository in detached HEAD mode
            p['gitIsCleanTag'] = details.isCleanTag.toString()
            p.store w, null
        }
        // copy needed, otherwise the bean VersionController can't load the file at startup when running complete-app tests.
//        copy {
//            from "$rootDir/src/main/resources/version.properties"
//            into "bin/main/"
//        }
    }
}
classes {
    dependsOn createProperties
}


runIde {
    autoReloadPlugins = true
    jvmArgs = [
            "--add-opens=java.base/java.util=ALL-UNNAMED",
            "-Xmx1G",
            "--add-exports",
            "java.base/jdk.internal.vm=ALL-UNNAMED",
//            "-XX:FlightRecorderOptions=stackdepth=100"
    ]
}

task postBuildPlugin(type: Exec) {
    // auto picks version of plugin
    environment('PLUGIN_VERSION', version)
    commandLine './post-build-plugin.sh'
}

// runs postbuild automatically after build plugin
postBuildPlugin.dependsOn buildPlugin
buildPlugin.finalizedBy postBuildPlugin

dependencies {
    implementation 'video.bug:common:1.4.7'
//    implementation files("/Users/artpar/.m2/repository/video/bug/common/1.4.7/common-1.4.7.jar")
    implementation 'org.slf4j:slf4j-api:2.0.3'
    implementation 'net.openhft:chronicle-map:3.22.9'
    implementation 'net.openhft:chronicle-queue:5.22.28'
    implementation 'org.json:json:20201115'
    implementation 'com.amplitude:java-sdk:1.12.0'
    implementation 'com.squareup:javapoet:1.13.0'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
    implementation 'com.github.javaparser:javaparser-core:3.24.8'
//    implementation 'com.github.javafaker:javafaker:1.0.2'
    implementation 'io.minio:minio:8.4.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testImplementation 'org.mockito:mockito-core:4.0.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
//    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'

    implementation group: 'com.j256.ormlite', name: 'ormlite-jdbc', version: '6.1'
    implementation group: 'com.j256.ormlite', name: 'ormlite-core', version: '6.1'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.39.3.0'
    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.2'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
    implementation 'com.googlecode.cqengine:cqengine:3.6.0'
    implementation 'io.kaitai:kaitai-struct-runtime:0.9'

//    implementation files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.33/unlogged-sdk-0.1.33.jar")
//    annotationProcessor files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.33/unlogged-sdk-0.1.33.jar")

//    implementation 'video.bug:unlogged-sdk:0.1.12'
//    annotationProcessor 'video.bug:unlogged-sdk:0.1.12'

}

runPluginVerifier {
    ideVersions = [
            "IU-2021.3.3",
            "IU-2022.3.3",
            "IU-2023.1.5",
            "IU-2023.2.5",
            "IU-2023.3.1",
            "IU-2023.3.2",
            "IU-2023.3.3",
            "IU-2023.3.4"
    ]
    verificationReportsDir = "verificationReport"
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2023.2.3'
    plugins = ['com.intellij.java', 'maven', 'gradle', 'org.jetbrains.kotlin']
    updateSinceUntilBuild = false
    sameSinceUntilBuild = true
//    pluginDependencies = [
//            { pluginId = "net.ashald.envfile" }
//    ]

}
patchPluginXml {
    changeNotes = """
<h2>Release Notes - 2024.2.13</h2>

<h3>New Features and Enhancements</h3>
<p>We are excited to announce the latest release of our service, introducing *Unlogged Premium*! Our premium plan offers a suite of advanced features designed to enhance your experience and boost productivity. Here's what's new:
</p>
<h3>Unlogged Premium Features:</h3>
<ol>
   <li>
    <p><b>Priority Support</b></p>
    <p>Get access to our dedicated support team for faster resolutions and personalized assistance.</p>
   </li>

   <li>
    <p><b>AI Assistance in Debugging</b></p>
    <p>Leverage cutting-edge AI technology to help you debug your applications more efficiently and effectively.</p>
   </li>

   <li>
    <p><b>Save Unlimited Mocks and Tests</b></p>
    <p>Enjoy the freedom to save an unlimited number of mocks and tests, ensuring you can thoroughly test your applications without any limitations or hassles.</p>
   </li>

   <li>
    <p><b>Updates</b></p>
    <p>Stay ahead with exclusive updates and enhancements available only to premium users.</p>
   </li>

   <li>
    <p><b>Server-Side Recording and Replay</b></p>
    <p>Record and replay server-side interactions to diagnose issues and improve the performance of your applications.</p>
   </li>
</ol>

<h3>General Improvements:</h3>
<ol>
    <li>
        <p><b>Enhanced Performance</b></p>
        <p>We have made several performance improvements to ensure smoother and faster operation across the platform.</p>
    </li>
    <li>
        <p><b>Bug Fixes</b></p>
        <p>Various bug fixes have been implemented to enhance stability and reliability.</p>
    </li>
</ol>

<h3>How to Upgrade:</h3>
<p>Upgrading to Unlogged Premium is simple. Start your subscription <a href="https://buy.stripe.com/fZeg1jc4I5UV1Gw146">here</a> </p>
<p>Thank you for your continued support. We are committed to providing you with the best tools and features to optimize your development process.</p>

<p>Best Regards,</p>
<p>The Unlogged Team</p>
    """
}

publishPlugin {
    token = "perm:c2hhcmR1bGxhdmVrYXI=.OTItMTAwMzA=.ZtumD3AexEy1NbzN66xWyJppVwMugG"
    channels = ['alpha']
}

test {
    useJUnitPlatform()
    jvmArgs = [
            "-Xmx1G"
    ]
}
//sourceCompatibility = JavaVersion.VERSION_17
//targetCompatibility = JavaVersion.VERSION_17

